# instagram-post-scraper

./: .gitignore  README.md  pyproject.toml
src/instagram_post_scraper/: cli.py  exceptions.py  scraper.py  url_parser.py
tests/: test_cli.py  test_scraper.py  test_url_parser.py
