[project]
name = "instagram-post-scraper"
version = "0.1.0"
description = "CLI tool to extract image URLs or download images from public Instagram posts"
readme = "README.md"
authors = [
    { name = "Danton", email = "dvinales@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "instaloader>=4.15.1",
]

[project.scripts]
instagram-post-scraper = "instagram_post_scraper.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
